Test Org - Speridian/src/objects/BA_Locations_Visited__c.object
<CustomObject>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AddressLine3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AddressType__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Shipping -Formula on Address</fullName>
                </value>
                <value>
                    <fullName>Stored in Junction Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_County__c</fullName>
        <description>Required a global picklist for county</description>
        <label>County</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_State__c</fullName>
        <description>Have to add a global picklist</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Locations Visited</label>
    <nameField>
        <label>Address Line 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations Visited</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>